concord_macros/tests/dsl/fail/fail_auth_in_route_atom.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client AuthRouteAtomApi {
        base "https://example.com"
    }

    GET Ping
    path [auth.token]
    -> Text<String>
}

fn main() {}
